// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders all intents 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-color: #4F2ABA;
  border-radius: 0.25rem;
  font-weight: 600;
  font-size: 0.6875rem;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  background-color: #FFFFFF;
  color: #4F2ABA;
  display: inline-block;
}

<span
  borderColor="palette.purple500"
  borderRadius="medium"
  className="c0"
  fontWeight="semiBold"
  intent="plain"
  size="small"
>
  plain
</span>
`;

exports[`Badge renders all intents 2`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-color: #4F2ABA;
  border-radius: 0.25rem;
  font-weight: 600;
  font-size: 0.6875rem;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  background-color: #FFFFFF;
  color: #4F2ABA;
  display: inline-block;
}

<span
  borderColor="palette.purple500"
  borderRadius="medium"
  className="c0"
  fontWeight="semiBold"
  intent="plain"
  size="small"
>
  positive
</span>
`;

exports[`Badge renders all intents 3`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-color: #4F2ABA;
  border-radius: 0.25rem;
  font-weight: 600;
  font-size: 0.6875rem;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  background-color: #FFFFFF;
  color: #4F2ABA;
  display: inline-block;
}

<span
  borderColor="palette.purple500"
  borderRadius="medium"
  className="c0"
  fontWeight="semiBold"
  intent="plain"
  size="small"
>
  info
</span>
`;

exports[`Badge renders all intents 4`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-color: #4F2ABA;
  border-radius: 0.25rem;
  font-weight: 600;
  font-size: 0.6875rem;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  background-color: #FFFFFF;
  color: #4F2ABA;
  display: inline-block;
}

<span
  borderColor="palette.purple500"
  borderRadius="medium"
  className="c0"
  fontWeight="semiBold"
  intent="plain"
  size="small"
>
  neutral
</span>
`;

exports[`Badge renders all intents 5`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-color: #4F2ABA;
  border-radius: 0.25rem;
  font-weight: 600;
  font-size: 0.6875rem;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  background-color: #FFFFFF;
  color: #4F2ABA;
  display: inline-block;
}

<span
  borderColor="palette.purple500"
  borderRadius="medium"
  className="c0"
  fontWeight="semiBold"
  intent="plain"
  size="small"
>
  warning
</span>
`;

exports[`Badge renders all intents 6`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-color: #4F2ABA;
  border-radius: 0.25rem;
  font-weight: 600;
  font-size: 0.6875rem;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  background-color: #FFFFFF;
  color: #4F2ABA;
  display: inline-block;
}

<span
  borderColor="palette.purple500"
  borderRadius="medium"
  className="c0"
  fontWeight="semiBold"
  intent="plain"
  size="small"
>
  critical
</span>
`;

exports[`Badge renders all sizes 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-color: #4F2ABA;
  border-radius: 0.25rem;
  font-weight: 600;
  font-size: 0.6875rem;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  background-color: #4F2ABA;
  color: #FFFFFF;
  display: inline-block;
}

<span
  borderColor="palette.purple500"
  borderRadius="medium"
  className="c0"
  fontWeight="semiBold"
  intent="default"
  size="small"
>
  small
</span>
`;

exports[`Badge renders all sizes 2`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-color: #4F2ABA;
  border-radius: 0.25rem;
  font-weight: 600;
  font-size: 0.75rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  background-color: #4F2ABA;
  color: #FFFFFF;
  display: inline-block;
}

<span
  borderColor="palette.purple500"
  borderRadius="medium"
  className="c0"
  fontWeight="semiBold"
  intent="default"
  size="medium"
>
  medium
</span>
`;

exports[`Badge renders all sizes 3`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-color: #4F2ABA;
  border-radius: 0.25rem;
  font-weight: 600;
  font-size: 1rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  background-color: #4F2ABA;
  color: #FFFFFF;
  display: inline-block;
}

<span
  borderColor="palette.purple500"
  borderRadius="medium"
  className="c0"
  fontWeight="semiBold"
  intent="default"
  size="large"
>
  large
</span>
`;

exports[`Badge renders with round flag 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-color: #4F2ABA;
  border-radius: 0.25rem;
  font-weight: 600;
  font-size: 0.6875rem;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  background-color: #4F2ABA;
  color: #FFFFFF;
  border-radius: 50px;
  display: inline-block;
}

<span
  borderColor="palette.purple500"
  borderRadius="medium"
  className="c0"
  fontWeight="semiBold"
  intent="default"
  round={true}
  size="small"
>
  small
</span>
`;

exports[`Badge renders with round flag 2`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-color: #4F2ABA;
  border-radius: 0.25rem;
  font-weight: 600;
  font-size: 0.75rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  background-color: #4F2ABA;
  color: #FFFFFF;
  border-radius: 50px;
  display: inline-block;
}

<span
  borderColor="palette.purple500"
  borderRadius="medium"
  className="c0"
  fontWeight="semiBold"
  intent="default"
  round={true}
  size="medium"
>
  medium
</span>
`;

exports[`Badge renders with round flag 3`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-color: #4F2ABA;
  border-radius: 0.25rem;
  font-weight: 600;
  font-size: 1rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  background-color: #4F2ABA;
  color: #FFFFFF;
  border-radius: 50px;
  display: inline-block;
}

<span
  borderColor="palette.purple500"
  borderRadius="medium"
  className="c0"
  fontWeight="semiBold"
  intent="default"
  round={true}
  size="large"
>
  large
</span>
`;

exports[`Badge renders with transparent flag 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-color: #4F2ABA;
  border-radius: 0.25rem;
  font-weight: 600;
  font-size: 0.6875rem;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  background-color: #4F2ABA;
  color: #FFFFFF;
  background-color: transparent;
  color: inherit;
  display: inline-block;
}

<span
  borderColor="palette.purple500"
  borderRadius="medium"
  className="c0"
  fontWeight="semiBold"
  intent="default"
  size="small"
  transparent={true}
>
  small
</span>
`;
